# realtime-messaging-infra

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
loadtest/: common.py  run_all.py  test_churn.py  test_connect_rate.py  test_fanout_latency.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: realtime-messaging.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
nginx/: nginx.conf
src/: config.py  connection_manager.py  dynamo.py  init_tables.py  main.py  metrics.py  observability.py  rate_limit.py  redis_client.py  schemas.py
tests/: conftest.py  test_config.py  test_connection_manager.py  test_dynamo.py  test_loadtest_common.py  test_rate_limit.py  test_schemas.py
tests/integration/: conftest.py  test_chaos_resilience.py  test_cross_instance_fanout.py  test_dynamodb_outage.py  test_end_to_end.py  test_majority_failure.py  test_rate_limit.py  test_redis_outage.py
web/: index.html
